--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -83,18 +83,18 @@ katex:
 # --------------------------------------
 
 # Favicon（網站圖標）
-favicon: /img/favicon.png
+favicon: https://cdn.jsdelivr.net/gh/pinknee/img@master/img/blog/favicon.png
 
 # Avatar (頭像)
 avatar:
-  img: /img/favicon.png
+  img: https://cdn.jsdelivr.net/gh/pinknee/img@master/img/blog/favicon.png
   effect: false
 
 # Disable all banner image
 disable_top_img:
 
 # The banner image of home page
-index_img: /img/bg.jpg
+index_img: https://cdn.jsdelivr.net/gh/pinknee/img@master/img/tools/bg.jpg
 
 # If the banner of page not setting, it will show the top_img
 default_top_img: false
@@ -506,7 +506,7 @@ tag_ui: # 留空或 index
 # Website Background (設置網站背景)
 # can set it to color or image (可設置圖片 或者 顔色)
 # The formal of image: url(http://xxxxxx.com/xxx.jpg)
-background: url(/img/bg.jpg)
+background: url(https://cdn.jsdelivr.net/gh/pinknee/img@master/img/tools/bg.jpg)
 
 # Footer Background
 footer_bg: false
