--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -11,9 +11,10 @@ menu:
    归档: /archives/ || fas fa-archive
    标签: /tags/ || fas fa-tags
    分类: /categories/ || fas fa-folder-open
-   链接||fas fa-list:
-    音乐: /music/ || fas fa-music
-    电影: /movies/ || fas fa-video
+   学习: /study/ || fas fa-book-reader
+   #链接||fas fa-list:
+    #音乐: /music/ || fas fa-music
+    #电影: /movies/ || fas fa-video
    相册: /gallery/ || fas fa-camera
    友链: /link/ || fas fa-link
    关于: /about/ || fas fa-heart
@@ -894,7 +895,7 @@ CDN:
 
   lazyload: https://cdn.jsdelivr.net/npm/vanilla-lazyload/dist/lazyload.iife.min.js
   instantpage: https://cdn.jsdelivr.net/npm/instant.page/instantpage.min.js
-  typed: https://cdn.jsdeli`r.net/npm/typed.js/lib/typed.min.js
+  typed: https://cdn.jsdelivr.net/npm/typed.js/lib/typed.min.js
   pangu: https://cdn.jsdelivr.net/npm/pangu/dist/browser/pangu.min.js
 
   # photo
