--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -1,23 +1,30 @@
-- class_name: 友情鏈接
-  class_desc: 那些人，那些事
+- class_name: 一些大佬
+  #class_desc: 都很厉害
   link_list:
-    - name: Hexo
-      link: https://hexo.io/zh-tw/
-      avatar: https://d33wubrfki0l68.cloudfront.net/6657ba50e702d84afb32fe846bed54fba1a77add/827ae/logo.svg
-      descr: 快速、簡單且強大的網誌框架
-
-- class_name: 網站
-  class_desc: 值得推薦的網站
+    - name: 冰老师
+      link: https://zfe.space/
+      avatar: https://cdn.jsdelivr.net/gh/pinknee/img-bed/img/zfe.space.jpg
+      descr: 做个有梦想的人！
+    - name: YuZhangWang的领域
+      link: https://yuzhang.wang/
+      avatar: https://cdn.jsdelivr.net/gh/pinknee/img-bed/img/yuzhangwang.jpg
+      descr: 两岸猿声啼不住 轻舟已过万重山
+    - name: 小康博客
+      link: https://www.antmoe.com/
+      avatar: https://cdn.jsdelivr.net/gh/pinknee/img-bed/img/xiaokang.jpg
+      descr: 一个收藏回忆与分享技术的地方！
+- class_name: 常用的学习网站
+  #class_desc: 常用的学习网站
   link_list:
-    - name: Youtube
-      link: https://www.youtube.com/
-      avatar: https://i.loli.net/2020/05/14/9ZkGg8v3azHJfM1.png
-      descr: 視頻網站
-    - name: Weibo
-      link: https://www.weibo.com/
-      avatar: https://i.loli.net/2020/05/14/TLJBum386vcnI1P.png
-      descr: 中國最大社交分享平台
-    - name: Twitter
-      link: https://twitter.com/
-      avatar: https://i.loli.net/2020/05/14/5VyHPQqR6LWF39a.png
-      descr: 社交分享平台
+    - name: 菜鸟教程
+      link: https://www.runoob.com/
+      avatar: https://cdn.jsdelivr.net/gh/pinknee/img-bed/img/runoob.jpg
+      descr: 全网最强的教程网站！
+    - name: CSDN
+      link: https://www.csdn.net/
+      avatar: https://cdn.jsdelivr.net/gh/pinknee/img-bed/img/csdn.png
+      descr: 专业开发者社区
+    - name: Github
+      link: https://github.com/
+      avatar: https://cdn.jsdelivr.net/gh/pinknee/img-bed/img/github.jpg
+      descr: 全球性代码托管平台
