将主页文章改回原样 设置部分页左侧栏不显示

--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -640,7 +640,7 @@ aside:
   hide: false
   button: true
   mobile: true # display on mobile
-  position: left # left or right
+  position: right # left or right
   card_author:
     enable: true
     description:
