--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ timezone: ''
 
 #butterfly 主题文章双栏布局
 butterfly_article_double_row:
-  enable: true
+  enable: false
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
 url: http://pinknee.cn
