--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -146,7 +146,7 @@ error_404:
 
 post_meta:
   page: # Home Page
-    date_type: both # created or updated or both 主頁文章日期是創建日或者更新日或都顯示
+    date_type: created # created or updated or both 主頁文章日期是創建日或者更新日或都顯示
     date_format: date # date/relative 顯示日期還是相對日期
     categories: true # true or false 主頁是否顯示分類
     tags: true # true or false 主頁是否顯示標籤
@@ -414,7 +414,7 @@ footer:
   owner:
     enable: true
     since: 2021
-  custom_text: Hi, welcome to my <a href="https://butterfly.js.org/">blog</a>!
+  custom_text:
   copyright: true # Copyright of theme and framework
 
 # Analysis
@@ -651,7 +651,7 @@ aside:
       link: https://github.com/pinknee
   card_announcement:
     enable: true
-    content: 欢迎光临Pink的博客！
+    content: 想到就做，拒绝拖延！
   card_recent_post:
     enable: true
     limit: 5 # if set 0 will show all
