--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -1,18 +1,3 @@
-- class_name: 一些大佬
-  #class_desc: 都很厉害
-  link_list:
-    - name: 冰老师
-      link: https://zfe.space/
-      avatar: https://cdn.jsdelivr.net/gh/pinknee/img-bed/img/zfe.space.jpg
-      descr: 做个有梦想的人！
-    - name: YuZhangWang的领域
-      link: https://yuzhang.wang/
-      avatar: https://cdn.jsdelivr.net/gh/pinknee/img-bed/img/yuzhangwang.jpg
-      descr: 两岸猿声啼不住 轻舟已过万重山
-    - name: 小康博客
-      link: https://www.antmoe.com/
-      avatar: https://cdn.jsdelivr.net/gh/pinknee/img-bed/img/xiaokang.jpg
-      descr: 一个收藏回忆与分享技术的地方！
 - class_name: 常用的学习网站
   #class_desc: 常用的学习网站
   link_list:
@@ -28,3 +13,18 @@
       link: https://github.com/
       avatar: https://cdn.jsdelivr.net/gh/pinknee/img-bed/img/github.jpg
       descr: 全球性代码托管平台
+- class_name: 博客参考
+  #class_desc: 都很厉害
+  link_list:
+    - name: 冰老师
+      link: https://zfe.space/
+      avatar: https://cdn.jsdelivr.net/gh/pinknee/img-bed/img/zfe.space.jpg
+      descr: 做个有梦想的人！
+    - name: YuZhangWang的领域
+      link: https://yuzhang.wang/
+      avatar: https://cdn.jsdelivr.net/gh/pinknee/img-bed/img/yuzhangwang.jpg
+      descr: 两岸猿声啼不住 轻舟已过万重山
+    - name: 小康博客
+      link: https://www.antmoe.com/
+      avatar: https://cdn.jsdelivr.net/gh/pinknee/img-bed/img/xiaokang.jpg
+      descr: 一个收藏回忆与分享技术的地方！
