--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -28,3 +28,35 @@
       link: https://www.antmoe.com/
       avatar: https://cdn.jsdelivr.net/gh/pinknee/img-bed/img/xiaokang.jpg
       descr: 一个收藏回忆与分享技术的地方！
+    - name: Arvin
+      link: https://arvinsblog.gitee.io/
+      avatar: https://q1.qlogo.cn/g?b=qq&nk=958655269&s=640
+      descr: 小时候词不达意，长大了言不由衷
+    - name: 云游君
+      link: https://www.yunyoujun.cn/
+      avatar: https://www.yunyoujun.cn/images/avatar.jpg
+      descr: 希望能成为一个有趣的人
+    - name: 是格子啊
+      link: https://sanshiliuxiao.top/
+      avatar: https://cdn.jsdelivr.net/gh/sanshiliuxiao/blog-static/avatar.jpg
+      descr: 做个纸灯、发光发亮
+    - name: cyris
+      link: https://cyris.moe/
+      avatar: https://cdn.jsdelivr.net/npm/cyris/images/avatar.png
+      descr: 花如解笑还多事，石不能言最可人
+    - name: 蝉時雨
+      link: https://chanshiyu.com/
+      avatar: https://cdn.jsdelivr.net/gh/chanshiyucx/yoi/blog/iavatar.jpg
+      descr: 蝉鸣如雨 花宵道中
+    - name: 996worker
+      link: https://www.996workers.icu/
+      avatar: https://www.996workers.icu/upload/2021/12/69796042-44c8f4dd4b7948d185ed23ac763027d3.jpg
+      descr: 欢迎访问996工人之家
+    - name: たかぎ
+      link: https://lixingyong.com/
+      avatar: https://lixingyong.com/upload/2021/09/%E5%BE%AE%E4%BF%A1%E5%9B%BE%E7%89%87_20201217154210-e5202587f5fd4a77b4f141501edd2f64.jpg
+      descr: You got to put the past behind you before you can move on
+    - name: OhYee
+      link: https://www.ohyee.cc/
+      avatar: https://static.oyohyee.com/logo.svg
+      descr:
